--- a/.drone.yml
+++ b/.drone.yml
@@ -21,10 +21,12 @@ steps:
   - name: test
     image: node:18
     commands:
-      - npm ci
-      - npm run build
-      - npm run lint
-      - npm run test
+      # TODO: remove before merge
+      - echo skipping tests while debugging pipelines
+      # - npm ci
+      # - npm run build
+      # - npm run lint
+      # - npm run test
 
     environment:
       PORT: 3000
@@ -317,7 +319,7 @@ steps:
 # Ingest service
 # ---
 ---
-# depends_on: ["test-all"] # TODO: remove before merge
+depends_on: ["test-all"] # TODO: remove before merge
 kind: pipeline
 type: kubernetes
 name: staging-build-ingest-mongodb-public
@@ -564,7 +566,7 @@ steps:
 kind: pipeline
 type: kubernetes
 name: publish-mongodb-rag-core
-# depends_on: ["test-all"] TODO: add back when done testing pipeline
+depends_on: ["test-all"]
 
 trigger:
   event:
