--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "lerna run build",
     "test": "lerna run test",
     "lint": "lerna run lint",
-    "release:chat-ui": "lerna run release --scope mongodb-chatbot-ui && git add ./package-lock.json && git commit --amend --no-edit"
+    "release:chat-ui": "lerna run release --scope='mongodb-chatbot-ui' && git add ./package-lock.json && git commit --amend --no-edit"
   },
   "devDependencies": {
     "lerna": "^5.6.2"
