--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -9,6 +9,10 @@
     "node": ">=18",
     "npm": ">=8"
   },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "main": "./dist/index.js",
   "scripts": {
     "clean": "rm -rf dist",
