make CLI entry point executable

--- a/ingest/package.json
+++ b/ingest/package.json
@@ -26,6 +26,7 @@
   "scripts": {
     "clean": "rm -rf build",
     "build": "tsc -b tsconfig.build.json",
+    "postbuild": "chmod +x build/main.js",
     "watch": "tsc -b -w",
     "test": "jest --forceExit",
     "lint": "eslint ./src --ext js,jsx,ts,tsx --report-unused-disable-directives",
@@ -45,6 +46,7 @@
     "@types/turndown": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5",
     "@typescript-eslint/parser": "^5",
+    "chmod": "^0.2.1",
     "eslint": "^8",
     "eslint-config-prettier": "^8",
     "eslint-plugin-jsdoc": "^46.4.5",
