--- a/.drone.yml
+++ b/.drone.yml
@@ -68,6 +68,7 @@ name: staging-build-chat-server
 trigger:
   branch:
     - main
+    - oss-refactor-pt-2 # TODO: remove before merge
   event:
     - push
 
@@ -135,6 +136,7 @@ trigger:
       - chat-ui/**/*
   branch:
     - main
+    - oss-refactor-pt-2 # TODO: remove before merge
 
 steps:
   # Deploys docker image associated with staging build that triggered promotion
