--- a/.npmrc
+++ b/.npmrc
@@ -1,8 +1,10 @@
 @lg-chat:registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
-//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
-
 @lg-tools:registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
+
+//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:_password=${LG_ARTIFACTORY_PASSWORD}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:username=${LG_ARTIFACTORY_USERNAME}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:email=${LG_ARTIFACTORY_EMAIL}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:always-auth=true
+
+//registry.npmjs.org/:_authToken=${NPM_TOKEN}
