--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -56,6 +56,7 @@
     "mongodb": "^5.6.0",
     "openai": "^3",
     "toml": "^3.0.0",
+    "typechat": "^0.0.10",
     "winston": "^3",
     "yaml": "^2.3.1",
     "zod": "^3.21.4"
