remove unused bundled dep

--- a/ingest/package.json
+++ b/ingest/package.json
@@ -11,8 +11,7 @@
   },
   "files": [
     "build",
-    "README.md",
-    "node_modules/mongodb-rag-core"
+    "README.md"
   ],
   "exports": {
     ".": "./build/index.js",
@@ -35,9 +34,6 @@
     "docs": "npx typedoc --excludePrivate --exclude '**/*.test.ts' --out docs src",
     "release": "release-it"
   },
-  "bundledDependencies": [
-    "mongodb-rag-core"
-  ],
   "devDependencies": {
     "@babel/preset-typescript": "^7",
     "@babel/types": "^7.22.5",
