--- a/chat-core/package.json
+++ b/chat-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-rag-core",
-  "version": "0.0.5-3",
+  "version": "0.0.5",
   "description": "Common elements used by the chatbot components.",
   "author": "MongoDB, Inc.",
   "license": "Apache-2.0",
