--- a/chat-server/.release-it.json
+++ b/chat-server/.release-it.json
@@ -19,8 +19,7 @@
     "before:init": [
       "pushd ../chat-core && npm i && npm run build && popd",
       "npm run build",
-      "npm run lint",
-      "npm run test"
+      "npm run lint"
     ]
   },
   "plugins": {
