remove unused dep

--- a/chat-server/package.json
+++ b/chat-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-chatbot-server",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "license": "Apache-2.0",
   "description": "A chatbot server for retrieval augmented generation (RAG).",
   "author": "MongoDB, Inc.",
@@ -35,7 +35,7 @@
     "langchain": "^0.0.148",
     "lodash.clonedeep": "^4.5.0",
     "mongodb": "^5.7.0",
-    "mongodb-rag-core": "^0.0.5",
+    "mongodb-rag-core": "0.1.8",
     "openai": "^3.2.1",
     "pm2": "^5.3.0",
     "rate-limit-mongo": "^2.3.2",
@@ -48,7 +48,6 @@
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
-    "@release-it/bumper": "^5.1.0",
     "@types/common-tags": "^1.8.1",
     "@types/connect-timeout": "^0.0.37",
     "@types/cors": "^2.8.13",
