--- a/examples/basic-chatbot-server/package.json
+++ b/examples/basic-chatbot-server/package.json
@@ -19,6 +19,6 @@
   "dependencies": {
     "@azure/openai": "^1.0.0-beta.6",
     "express": "^4.18.2",
-    "mongodb-chatbot-server": "npm:^0.1.7"
+    "mongodb-chatbot-server": "0.1.9"
   }
 }
