--- a/.drone.yml
+++ b/.drone.yml
@@ -21,12 +21,10 @@ steps:
   - name: test
     image: node:18
     commands:
-      # TODO: remove before merge
-      - echo skipping tests while debugging pipelines
-      # - npm ci
-      # - npm run build
-      # - npm run lint
-      # - npm run test
+      - npm ci
+      - npm run build
+      - npm run lint
+      - npm run test
 
     environment:
       PORT: 3000
