--- a/chat-ui/package.json
+++ b/chat-ui/package.json
@@ -47,7 +47,6 @@
     "test": "vitest"
   },
   "bundleDependencies": [
-    "chat-core",
     "@lg-chat/avatar",
     "@lg-chat/chat-window",
     "@lg-chat/chat-disclaimer",
@@ -90,7 +89,7 @@
     "@lg-chat/message-rating": "^1.1.3",
     "@microsoft/fetch-event-source": "^2.0.1",
     "buffer": "^6.0.3",
-    "chat-core": "file:../chat-core",
+    "mongodb-rag-core": "*",
     "esbuild": "^0.17.19",
     "prettier": "^2.8.8",
     "react-markdown": "^8.0.7",
