--- a/.npmrc
+++ b/.npmrc
@@ -2,7 +2,6 @@
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
 
 @lg-tools:registry=https://artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/
-//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:_password=${LG_ARTIFACTORY_PASSWORD}
-//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:username=${LG_ARTIFACTORY_USERNAME}
+//artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:_authToken=${LG_ARTIFACTORY_TOKEN}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:email=${LG_ARTIFACTORY_EMAIL}
 //artifactory.corp.mongodb.com/artifactory/api/npm/leafygreen-ui/:always-auth=true
