add infra changes from main

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,7 +6,6 @@ trigger:
   event:
     - push
     - tag
-    - pull_request
   paths:
     include:
       - chat-server/**/*
@@ -14,7 +13,6 @@ trigger:
       - chat-ui/**/*
       - ingest/**/*
       - scripts/**/*
-      - ingest-mongodb-public/**/*
 
 steps:
   - name: test
@@ -44,10 +42,8 @@ steps:
         from_secret: openai_chat_completion_deployment
       DEVCENTER_CONNECTION_URI:
         from_secret: devcenter_connection_uri
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
       GITHUB_ACCESS_TOKEN:
@@ -79,10 +75,8 @@ steps:
   - name: publish-staging-chat-server
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -91,8 +85,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
         - GIT_COMMIT=${DRONE_COMMIT_SHA:0:7}
       tags:
@@ -165,10 +158,8 @@ steps:
     image: plugins/kaniko-ecr
     environment:
       ENVIRONMENT: qa
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -178,8 +169,7 @@ steps:
       repo: docs/${DRONE_REPO_NAME}-chat-server
       build_args:
         - ENVIRONMENT
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-qa
@@ -246,10 +236,8 @@ steps:
   - name: publish-production-chat-server
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -258,8 +246,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-chat-server
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-production
@@ -321,13 +308,11 @@ name: staging-build-ingest-service
 trigger:
   branch:
     - main
-    - ingest-plugins # REMOVE ME
   event:
     - push
   paths:
     include:
       - ingest/**/*
-      - ingest-mongodb-public/**/*
       - chat-core/**/*
 
 steps:
@@ -335,10 +320,8 @@ steps:
   - name: publish-staging-ingest-service
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -347,8 +330,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-ingest-service
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-staging
@@ -420,10 +402,8 @@ steps:
   - name: publish-production-ingest-service
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -432,8 +412,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-ingest-service
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-production
@@ -500,10 +479,8 @@ steps:
   - name: npm
     image: plugins/npm
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -540,10 +517,8 @@ steps:
   - name: publish-staging-scripts-service
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -552,8 +527,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-scripts-service
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-staging
@@ -626,10 +600,8 @@ steps:
   - name: publish-production-scripts-service
     image: plugins/kaniko-ecr
     environment:
-      LG_ARTIFACTORY_PASSWORD:
-        from_secret: lg_artifactory_password
-      LG_ARTIFACTORY_USERNAME:
-        from_secret: lg_artifactory_username
+      LG_ARTIFACTORY_TOKEN:
+        from_secret: lg_artifactory_token
       LG_ARTIFACTORY_EMAIL:
         from_secret: lg_artifactory_email
     settings:
@@ -638,8 +610,7 @@ steps:
       registry: 795250896452.dkr.ecr.us-east-1.amazonaws.com
       repo: docs/${DRONE_REPO_NAME}-scripts-service
       build_args:
-        - LG_ARTIFACTORY_PASSWORD
-        - LG_ARTIFACTORY_USERNAME
+        - LG_ARTIFACTORY_TOKEN
         - LG_ARTIFACTORY_EMAIL
       tags:
         - git-${DRONE_COMMIT_SHA:0:7}-production
